--- a/App 05 - Super Senha/SuperSenha/SuperSenha/Base.lproj/Main.storyboard
+++ b/App 05 - Super Senha/SuperSenha/SuperSenha/Base.lproj/Main.storyboard
@@ -151,6 +151,14 @@
                     <navigationItem key="navigationItem" title="Gerador de senhas" id="LvH-ml-fQm">
                         <barButtonItem key="backBarButtonItem" title="Gerador de senhas" id="8yH-D5-H0i"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="swCapitalLetters" destination="Pfd-dm-1LN" id="Bxi-Vg-q5e"/>
+                        <outlet property="swLetters" destination="9rQ-bJ-GYc" id="hwZ-5g-DKA"/>
+                        <outlet property="swNumbers" destination="GhZ-Is-Rhf" id="ma1-nk-hKz"/>
+                        <outlet property="swSpecialCharacters" destination="eIx-yz-dy2" id="A9H-jh-dPT"/>
+                        <outlet property="tfNumberOfCharacters" destination="HC2-09-ul3" id="hkI-bX-pbu"/>
+                        <outlet property="tfTotalPasswords" destination="ble-Hm-xmJ" id="7XH-BN-dJD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -159,7 +167,7 @@
         <!--Senhas-->
         <scene sceneID="PUf-vq-t9L">
             <objects>
-                <viewController id="pNV-EG-zUh" sceneMemberID="viewController">
+                <viewController id="pNV-EG-zUh" customClass="PasswordsViewController" customModule="SuperSenha" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eLX-gv-8KF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -182,12 +190,15 @@
                                 <state key="normal" title="Gerar Novamente">
                                     <color key="titleColor" red="0.59607843140000005" green="0.14117647059999999" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="Generate:" destination="pNV-EG-zUh" eventType="touchUpInside" id="wCN-lt-T1K"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Kxr-bc-GoW">
                                 <rect key="frame" x="16" y="138" width="343" height="401"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -206,15 +217,18 @@
                         <viewLayoutGuide key="safeArea" id="tgE-QD-wGO"/>
                     </view>
                     <navigationItem key="navigationItem" title="Senhas" id="uii-4E-U1B"/>
+                    <connections>
+                        <outlet property="tvPasswords" destination="Kxr-bc-GoW" id="rJt-Ug-551"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="siC-1P-t9F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1800.8" y="-564.46776611694156"/>
         </scene>
-        <!--View Controller-->
+        <!--Security Tips View Controller-->
         <scene sceneID="zhK-hl-vZm">
             <objects>
-                <viewController id="nFW-j4-HeU" sceneMemberID="viewController">
+                <viewController id="nFW-j4-HeU" customClass="SecurityTipsViewController" customModule="SuperSenha" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zrc-hc-MFC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -230,6 +244,9 @@
                                 <state key="normal" title="Fechar">
                                     <color key="titleColor" red="0.59607843140000005" green="0.14117647059999999" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="Close:" destination="nFW-j4-HeU" eventType="touchUpInside" id="Y8N-To-aPE"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMu-jp-Bsa">
                                 <rect key="frame" x="29" y="62" width="316" height="543"/>
@@ -412,6 +429,7 @@ Há diversos programas disponíveis que armazenam os dados de maneira segura e a
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="EyU-wu-g9z">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.59607843140000005" green="0.14117647059999999" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
