--- a/App 09 - Campeoes da Copa/CampeoesDaCopa/CampeoesDaCopa/Views/Base.lproj/Main.storyboard
+++ b/App 09 - Campeoes da Copa/CampeoesDaCopa/CampeoesDaCopa/Views/Base.lproj/Main.storyboard
@@ -176,14 +176,14 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gMW-J3-6gb">
                                 <rect key="frame" x="208" y="131" width="84" height="58"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTt-mh-TbS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dTt-mh-TbS">
                                 <rect key="frame" x="53.5" y="197" width="33" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XfL-iF-MCg">
-                                <rect key="frame" x="229" y="197" width="33" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XfL-iF-MCg">
+                                <rect key="frame" x="233.5" y="197" width="33" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -208,6 +208,77 @@
                                     <constraint firstAttribute="height" constant="2" id="4qL-Tb-vKn"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="0eq-RK-eXk">
+                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="6EH-AL-Ogd" customClass="GamesTableViewCell" customModule="CampeoesDaCopa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.5" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6EH-AL-Ogd" id="pFH-48-TNG">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AfV-fV-P7I">
+                                                    <rect key="frame" x="16" y="6" width="46" height="32"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="32" id="Igy-pp-MIe"/>
+                                                        <constraint firstAttribute="width" constant="46" id="RR7-FL-pBv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N6a-3Q-eTC">
+                                                    <rect key="frame" x="258" y="6" width="46" height="32"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="3" translatesAutoresizingMaskIntoConstraints="NO" id="IE4-fb-RsN">
+                                                    <rect key="frame" x="219.5" y="14.5" width="30.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="2 x 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.34999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="Uvv-Rh-Nxi">
+                                                    <rect key="frame" x="143" y="12" width="34.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="3" translatesAutoresizingMaskIntoConstraints="NO" id="QaC-sC-yvV">
+                                                    <rect key="frame" x="70" y="14.5" width="30.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="IE4-fb-RsN" firstAttribute="centerY" secondItem="pFH-48-TNG" secondAttribute="centerY" id="1J5-46-QqV"/>
+                                                <constraint firstItem="N6a-3Q-eTC" firstAttribute="top" secondItem="pFH-48-TNG" secondAttribute="top" constant="6" id="2sS-nj-xmd"/>
+                                                <constraint firstItem="QaC-sC-yvV" firstAttribute="leading" secondItem="AfV-fV-P7I" secondAttribute="trailing" constant="8" id="3O6-R3-zxU"/>
+                                                <constraint firstItem="QaC-sC-yvV" firstAttribute="centerY" secondItem="pFH-48-TNG" secondAttribute="centerY" id="HMJ-Ud-y0I"/>
+                                                <constraint firstItem="Uvv-Rh-Nxi" firstAttribute="centerY" secondItem="pFH-48-TNG" secondAttribute="centerY" id="Ieb-jL-2zE"/>
+                                                <constraint firstItem="IE4-fb-RsN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Uvv-Rh-Nxi" secondAttribute="trailing" constant="8" id="LDb-6P-gyz"/>
+                                                <constraint firstItem="Uvv-Rh-Nxi" firstAttribute="centerX" secondItem="pFH-48-TNG" secondAttribute="centerX" id="RW1-vc-hq4"/>
+                                                <constraint firstItem="N6a-3Q-eTC" firstAttribute="height" secondItem="AfV-fV-P7I" secondAttribute="height" id="UH6-WH-Y3e"/>
+                                                <constraint firstItem="AfV-fV-P7I" firstAttribute="top" secondItem="pFH-48-TNG" secondAttribute="top" constant="6" id="cBb-Es-2C0"/>
+                                                <constraint firstItem="Uvv-Rh-Nxi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="QaC-sC-yvV" secondAttribute="trailing" constant="8" id="eSU-el-l0i"/>
+                                                <constraint firstItem="N6a-3Q-eTC" firstAttribute="width" secondItem="AfV-fV-P7I" secondAttribute="width" id="frK-py-bpt"/>
+                                                <constraint firstItem="N6a-3Q-eTC" firstAttribute="leading" secondItem="IE4-fb-RsN" secondAttribute="trailing" constant="8" id="kbU-TU-zNd"/>
+                                                <constraint firstItem="AfV-fV-P7I" firstAttribute="leading" secondItem="pFH-48-TNG" secondAttribute="leading" constant="16" id="rPM-bq-PQR"/>
+                                                <constraint firstAttribute="trailing" secondItem="N6a-3Q-eTC" secondAttribute="trailing" constant="16" id="xbW-XS-UVa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ivAway" destination="N6a-3Q-eTC" id="HXk-p6-Ig0"/>
+                                            <outlet property="ivHome" destination="AfV-fV-P7I" id="jgm-R3-HqC"/>
+                                            <outlet property="lbAway" destination="IE4-fb-RsN" id="hZa-Rx-hKX"/>
+                                            <outlet property="lbHome" destination="QaC-sC-yvV" id="3io-bT-Gec"/>
+                                            <outlet property="lbScore" destination="Uvv-Rh-Nxi" id="xor-4V-uZq"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="sXo-I9-pWD" id="ynv-KP-dFZ"/>
+                                    <outlet property="delegate" destination="sXo-I9-pWD" id="sSt-vT-YvQ"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -215,10 +286,15 @@
                             <constraint firstItem="XfL-iF-MCg" firstAttribute="centerY" secondItem="dTt-mh-TbS" secondAttribute="centerY" id="7HX-yQ-I8y"/>
                             <constraint firstItem="bYE-aU-41t" firstAttribute="centerX" secondItem="nkc-xa-0Q9" secondAttribute="centerX" id="81Y-Ai-BNS"/>
                             <constraint firstItem="jni-9e-4za" firstAttribute="leading" secondItem="0DK-Et-XHO" secondAttribute="trailing" constant="16" id="C3a-KO-YLo"/>
+                            <constraint firstItem="I0y-2e-udO" firstAttribute="bottom" secondItem="0eq-RK-eXk" secondAttribute="bottom" id="EAN-4h-uXP"/>
+                            <constraint firstItem="0eq-RK-eXk" firstAttribute="top" secondItem="Ee6-XB-qz7" secondAttribute="bottom" constant="4" id="GTd-Xq-aJC"/>
                             <constraint firstItem="dTt-mh-TbS" firstAttribute="centerX" secondItem="0DK-Et-XHO" secondAttribute="centerX" id="HFv-h4-O0A"/>
+                            <constraint firstItem="XfL-iF-MCg" firstAttribute="centerX" secondItem="gMW-J3-6gb" secondAttribute="centerX" id="IaZ-sM-MRx"/>
+                            <constraint firstItem="0eq-RK-eXk" firstAttribute="leading" secondItem="I0y-2e-udO" secondAttribute="leading" id="JMm-uS-ZDC"/>
                             <constraint firstItem="jni-9e-4za" firstAttribute="centerY" secondItem="0DK-Et-XHO" secondAttribute="centerY" id="Kve-J0-Pwe"/>
                             <constraint firstItem="gMW-J3-6gb" firstAttribute="leading" secondItem="jni-9e-4za" secondAttribute="trailing" constant="16" id="N1T-Hh-PkD"/>
                             <constraint firstItem="dTt-mh-TbS" firstAttribute="top" secondItem="0DK-Et-XHO" secondAttribute="bottom" constant="8" id="Ogi-7s-fw1"/>
+                            <constraint firstItem="I0y-2e-udO" firstAttribute="trailing" secondItem="0eq-RK-eXk" secondAttribute="trailing" id="RJc-eL-NSK"/>
                             <constraint firstItem="Ee6-XB-qz7" firstAttribute="top" secondItem="bYE-aU-41t" secondAttribute="bottom" constant="8" id="b8d-1u-agQ"/>
                             <constraint firstItem="XfL-iF-MCg" firstAttribute="top" secondItem="gMW-J3-6gb" secondAttribute="bottom" constant="8" id="cGc-eU-4dn"/>
                             <constraint firstItem="gMW-J3-6gb" firstAttribute="height" secondItem="0DK-Et-XHO" secondAttribute="height" id="eIk-XX-j5f"/>
@@ -239,6 +315,7 @@
                         <outlet property="lbScore" destination="jni-9e-4za" id="rtp-gN-8XM"/>
                         <outlet property="lbVice" destination="XfL-iF-MCg" id="yB3-yA-5ud"/>
                         <outlet property="lbWinner" destination="dTt-mh-TbS" id="arP-W2-lPx"/>
+                        <outlet property="tableView" destination="0eq-RK-eXk" id="jRT-1c-prt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gst-tb-c4F" userLabel="First Responder" sceneMemberID="firstResponder"/>
