--- a/App 11 - MyGames/MyGames/MyGames/Views/Base.lproj/Main.storyboard
+++ b/App 11 - MyGames/MyGames/MyGames/Views/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                     <outlet property="ivCover" destination="hdU-hd-A6e" id="joM-pX-xsa"/>
                                     <outlet property="lbConsole" destination="pBd-nR-tgX" id="O8w-PX-iJq"/>
                                     <outlet property="lbTitle" destination="7md-vr-Xv4" id="O9n-Bj-xt6"/>
-                                    <segue destination="9Qn-YU-Cnq" kind="show" id="CLq-YF-AhF"/>
+                                    <segue destination="9Qn-YU-Cnq" kind="show" identifier="gameSegue" id="CLq-YF-AhF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -82,7 +82,7 @@
                     <navigationItem key="navigationItem" title="Lista de Jogos" id="xeZ-Ht-Ksr">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="fkq-Rw-Z6s">
                             <connections>
-                                <segue destination="e9p-fC-9TS" kind="show" id="mHl-5Y-SGe"/>
+                                <segue destination="e9p-fC-9TS" kind="show" identifier="newGameSegue" id="mHl-5Y-SGe"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -214,7 +214,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="4os-Yj-9ZD">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="4os-Yj-9ZD">
                                 <rect key="frame" x="16" y="180.5" width="288" height="318.5"/>
                             </imageView>
                         </subviews>
@@ -377,6 +377,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="woR-mV-W8X" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xoy-uO-ZY7">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
